feat: Enhance CSV handling and UI improvements
- Added @corespeed/zypher dependency for enhanced functionality.
- Updated Home component layout for better responsiveness and structure.
- Improved CSVTableView and ChartView components with better overflow handling and sticky headers.
- Enhanced ChatPanel with new suggestions for user interaction.
- Refined UploadSection for better user experience and added demo file options.
- Implemented getCSVInfo tool to provide users with insights about the loaded CSV data.
- Updated ZypherAgent to utilize the new get_csv_info tool and improve data handling.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@corespeed/zypher": "npm:@jsr/corespeed__zypher@^0.5.1",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
@@ -23,7 +24,8 @@
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
